# claude1-swing-trading

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  read-scope.md
.claude/agents/: news-research.md  portfolio-manager.md  quant-strategist.md  (+4 more)
ledgers/: README.md
routines/: daily.md  telegram-setup.md
scripts/: _flatten_v2_orphans_2026_06_05.py  _replace_expired_stops_2026_06_05.py  add-position.ps1  auto_paper_dry_run.py  backtest_sweep_ai_thematic.py  build_ai_thematic_universes.py  build_insider_events.py  build_liquid_us_universe.py  check-positions.ps1  exit_nflx_2026_06_09.py  fetch_prices.py  insider_gate_run.py  install-auto-paper-tasks.ps1  install-auto-paper-v2-shadow.ps1  install-health-check-task.ps1  install-kill-switch-tasks.ps1  install-morning-task.ps1  install-news-hourly-task.ps1  install-position-checker-task.ps1  install-x-ingest-tasks.ps1  manual_rebalance.py  net_gate_rerun.py  orphan_zero_baseline.py  promote_ai_thematic_setups.py  recover_orphan_ledgers.py  refetch_universe_2017.py  rerun_setup_8y.py  send-news-to-telegram.ps1  send-to-telegram.ps1  signal_correlation_residual_vs_clenow.py  smoke_place_candidate.py  start-telegram-session.ps1  trim_go_2026_05_27.py  value_momentum_gate_run.py
tests/: conftest.py  test_add_on_evaluator.py  test_artifact_classifier_kill_event_wiring.py  test_atr_compute.py  test_auto_paper_calibration.py  test_auto_paper_config.py  test_auto_paper_critic_panel.py  test_auto_paper_dashboard_html.py  test_auto_paper_entry_pricing.py  test_auto_paper_exits.py  test_auto_paper_orphan_check.py  test_auto_paper_performance.py  test_auto_paper_pipeline.py  test_auto_paper_presession_sweep.py  test_auto_paper_quant_scanner.py  test_auto_paper_reconcile.py  test_auto_paper_run_entry.py  test_auto_paper_run_entry_integration.py  test_auto_paper_screener.py  test_auto_paper_shell_ledger.py  test_auto_paper_state.py  test_auto_paper_stop_ratchet.py  test_auto_paper_stuck_closing.py  test_backtest_cost_model.py  test_backtest_data_cache.py  test_backtest_metrics.py  test_backtest_pyramid.py  test_backtest_replays.py  test_backtest_sell_aware.py  test_backtest_setup_replay.py  test_backtest_simulator.py  test_backtest_trailing_stop.py  test_backtest_walk_forward.py  test_base_stage_detect.py  test_bias_audit.py  test_broker_tiger_client_mock.py  test_broker_tiger_load_config.py  test_claim_extract.py  test_climax_top_detect.py  test_combined_breakeven.py  (+91 more)
tools/: README.md  __init__.py  add_on_evaluator.py  atr_compute.py  base_stage_detect.py  bias_audit.py  claim_extract.py  cli.py  climax_top_detect.py  combined_breakeven.py  compute_yoy.py  contract.py  data.py  day7_milestone_check.py  debate_synthesis.py  deployable_setups.yml  earnings_calendar.py  ep_detect.py  ep_grade.py  freshness.py  ledger_freshness_audit.py  ledger_trace_append.py  magna_score.py  market_calendar.py  momentum_burst_detect.py  pe_expansion_check.py  position_sizer.py  position_state.py  prior_rally_pct.py  pullback_detect.py  regime_check.py  resistance_break.py  rsi_divergence.py  sell_decision.py  sell_into_strength.py  sltb_scan.py  stale_phrase_detector.py  stop_sizer.py  trace_audit.py  trace_rerun.py  (+4 more)
(+200 files in other folders)
